# autogram

./: .envrc  .gitignore  README.md  devenv.nix  devenv.yaml  flake.nix  mypy.ini  pdm.toml  pyproject.toml
GrammarChecker.workflow/Contents/: Info.plist  document.wflow
MLXGrammarChecker.workflow/Contents/: Info.plist  document.wflow
data/rephrase_text/: dataset.csv
gui/: bun.lockb  package.json
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/src/: main.rs  tray.rs
scripts/: app-gemini-ollama.py  app-mlx-gguf.py  app-mlx-lm.py  models.py  prompts.py  utils.py
src/shortcutx/: __init__.py  compiled.pkl  compiler.py  evaluator.py  generator.py  instrument.py  llm.py  main.py  program.py  signature.py
