[project]
name = "autogram"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "San Nguyen", email = "vinhsannguyen91@gmail.com"},
]
dependencies = [
    "mlx>=0.1.0",
    "numpy>=1.26.3",
    "huggingface-hub>=0.20.3",
    "ollama>=0.1.6",
    "pyperclip>=1.8.2",
    "google-generativeai>=0.3.2",
    "transformers>=4.37.2",
    "mlx-lm>=0.0.7",
    "jinja2>=3.1.3",
    "sentencepiece>=0.1.99",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[project.optional-dependencies]
dev = [
    "mypy>=1.8.0",
]
[tool.pdm]
distribution = false
